--- a/css/common.css
+++ b/css/common.css
@@ -30,6 +30,81 @@ button {
   cursor: pointer;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+li:last-child {
+  margin-bottom: 0;
+}
+
+/* task 1 */
+
+#categories {
+  background-color: #FFF;;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#categories:last-child {
+  margin-bottom: 24px;
+}
+
+#categories .item {
+  width: 360px;
+  border-radius: 8px;
+  background: #F6F6FE;
+  padding: 16px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+#categories h2 {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  margin-bottom: 16px;
+}
+
+#categories li ul li {
+  color:  #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 4px 4px 4px 16px;
+  margin-bottom: 8px;
+}
+
+#categories li ul li:focus,
+#categories li ul li:hover {
+  border: 1px solid #000;
+}
+
+#categories li ul li:last-child {
+  margin-bottom: 0;
+}
+
+
 /* task 2 */
 
 .gallery {
@@ -41,6 +116,7 @@ button {
   row-gap: 48px;
   column-gap: 24px;
   margin: auto;
+  background: #FFF;
 }
 
 .gallery-item {
@@ -51,4 +127,209 @@ button {
   object-fit: cover;
   width: 360px;
   height: 300px;
+}
+
+/* task 3 */
+
+#name-input {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  width: 360px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-top: 24px;
+  margin-left: 24px;
+  margin-bottom: 16px;
+}
+
+#name-input:focus,
+#name-input:hover {
+  border: 1px solid #000;
+}
+
+#name-input + h1 {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px; /* 133.333% */
+  letter-spacing: 0.96px;
+  margin-left: 24px;
+  margin-bottom: 24px;
+}
+
+/* task 4 */
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  border-radius: 8px;
+  background: #FFF;
+  width: 408px;
+}
+
+.login-form label {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+  width: 360px;
+}
+
+.login-form input:hover,
+.login-form input:focus {
+  border: 1px solid #000;
+}
+
+.login-form button {
+  border: none;
+  border-radius: 8px;
+  background: #4E75FF;
+  padding: 8px 16px;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+  width: 86px;
+  height: 40px;
+  margin-top: 16px;
+}
+
+.login-form button:focus,
+.login-form button:hover {
+  background: #6C8CFF;
+}
+
+/* task 5 */
+.widget {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 100px 88px;
+  width: 345px;
+}
+
+.widget p {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  margin-bottom: 16px;
+} 
+
+.widget button {
+  border: none;
+  border-radius: 8px;
+  background: #4E75FF;
+  padding: 8px 16px;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0,04em;
+  width: 148px;
+}
+
+.widget button:focus,
+.widget button:hover {
+  background: #6C8CFF;
+}
+
+/* task 6 */
+
+#controls {
+  display: flex;
+  padding: 32px;
+  gap: 16px;
+  border-radius: 8px;
+  background: #F6F6FE;
+  justify-content: center;
+}
+
+#controls input {
+  border-radius: 8px;
+  border: 1px solid #808080;
+  width: 150px;
+  height: 40px; 
+  text-align: center; 
+
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+[data-create] {
+  width: 120px;
+  border: none;
+  border-radius: 8px;
+  background: #4E75FF;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+[data-destroy] {
+  width: 120px;
+  border: none;
+  border-radius: 8px;
+  background: #FF4E4E;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+#boxes {
+  display: flex;
+  padding: 32px;
+  column-gap: 44px;
+  justify-content: center;
+}
+
+#controls input:focus,
+#controls input:hover {
+  border: 1px solid #000;
+}
+
+[data-create]:focus,
+[data-create]:hover {
+  background: #6C8CFF;
+}
+
+[data-destroy]:focus,
+[data-destroy]:hover {
+  background: #FF7070;
 }
