--- a/css/common.css
+++ b/css/common.css
@@ -4,11 +4,11 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #f0fff0;
   color: #212121;
   line-height: 1.5;
 }
@@ -48,10 +48,23 @@ li:last-child {
   margin-bottom: 0;
 }
 
+.general-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.1);
+  padding: 40px;
+  border: 4mm ridge #ffebcd;
+  font-size: 30px;
+  background-color: #90ee90;
+}
+
 /* task 1 */
 
 #categories {
-  background-color: #FFF;;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,14 +77,14 @@ li:last-child {
 #categories .item {
   width: 360px;
   border-radius: 8px;
-  background: #F6F6FE;
+  background: #f6f6fe;
   padding: 16px;
   margin-top: 24px;
   margin-bottom: 24px;
 }
 
 #categories h2 {
-  color: #2E2F42;
+  color: #2e2f42;
   font-family: Montserrat;
   font-size: 24px;
   font-style: normal;
@@ -82,7 +95,7 @@ li:last-child {
 }
 
 #categories li ul li {
-  color:  #2E2F42;
+  color: #2e2f42;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -104,7 +117,6 @@ li:last-child {
   margin-bottom: 0;
 }
 
-
 /* task 2 */
 
 .gallery {
@@ -116,7 +128,7 @@ li:last-child {
   row-gap: 48px;
   column-gap: 24px;
   margin: auto;
-  background: #FFF;
+  background: #fff;
 }
 
 .gallery-item {
@@ -155,7 +167,7 @@ li:last-child {
 }
 
 #name-input + h1 {
-  color: #2E2F42;
+  color: #2e2f42;
   font-family: Montserrat;
   font-size: 24px;
   font-style: normal;
@@ -173,12 +185,12 @@ li:last-child {
   flex-direction: column;
   padding: 24px;
   border-radius: 8px;
-  background: #FFF;
+  background: #fff;
   width: 408px;
 }
 
 .login-form label {
-  color: #2E2F42;
+  color: #2e2f42;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -199,9 +211,9 @@ li:last-child {
 .login-form button {
   border: none;
   border-radius: 8px;
-  background: #4E75FF;
+  background: #4e75ff;
   padding: 8px 16px;
-  color: #FFF;
+  color: #fff;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -215,7 +227,7 @@ li:last-child {
 
 .login-form button:focus,
 .login-form button:hover {
-  background: #6C8CFF;
+  background: #6c8cff;
 }
 
 /* task 5 */
@@ -227,7 +239,7 @@ li:last-child {
 }
 
 .widget p {
-  color: #2E2F42;
+  color: #2e2f42;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -235,26 +247,26 @@ li:last-child {
   line-height: 1.5;
   letter-spacing: 0.04em;
   margin-bottom: 16px;
-} 
+}
 
 .widget button {
   border: none;
   border-radius: 8px;
-  background: #4E75FF;
+  background: #4e75ff;
   padding: 8px 16px;
-  color: #FFF;
+  color: #fff;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0,04em;
+  letter-spacing: 0, 04em;
   width: 148px;
 }
 
 .widget button:focus,
 .widget button:hover {
-  background: #6C8CFF;
+  background: #6c8cff;
 }
 
 /* task 6 */
@@ -264,7 +276,7 @@ li:last-child {
   padding: 32px;
   gap: 16px;
   border-radius: 8px;
-  background: #F6F6FE;
+  background: #f6f6fe;
   justify-content: center;
 }
 
@@ -272,10 +284,10 @@ li:last-child {
   border-radius: 8px;
   border: 1px solid #808080;
   width: 150px;
-  height: 40px; 
-  text-align: center; 
+  height: 40px;
+  text-align: center;
 
-  color: #2E2F42;
+  color: #2e2f42;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -288,8 +300,8 @@ li:last-child {
   width: 120px;
   border: none;
   border-radius: 8px;
-  background: #4E75FF;
-  color: #FFF;
+  background: #4e75ff;
+  color: #fff;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -302,8 +314,8 @@ li:last-child {
   width: 120px;
   border: none;
   border-radius: 8px;
-  background: #FF4E4E;
-  color: #FFF;
+  background: #ff4e4e;
+  color: #fff;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
@@ -326,10 +338,10 @@ li:last-child {
 
 [data-create]:focus,
 [data-create]:hover {
-  background: #6C8CFF;
+  background: #6c8cff;
 }
 
 [data-destroy]:focus,
 [data-destroy]:hover {
-  background: #FF7070;
+  background: #ff7070;
 }
